theme toggle, router base

--- a/css/variables.css
+++ b/css/variables.css
@@ -9,6 +9,6 @@
   --text: #e8f3f8;
   --background: #071217;
   --primary: #91c8de;
-  --secondary: #79267e;
-  --accent: #cb5285;
+  --secondary: #cb5285;
+  --accent: #79267e;
 }
