--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,10 @@
   gap: 1rem;
 }
 
+.create-post {
+  display: none;
+}
+
 @media screen and (min-width: 600px) {
   .frontpage-image {
     max-width: 90%;
