--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,10 @@
   display: none;
 }
 
+.search-container {
+  display: none;
+}
+
 @media screen and (min-width: 600px) {
   .frontpage-image {
     max-width: 90%;
