--- a/css/base.css
+++ b/css/base.css
@@ -97,6 +97,26 @@ p {
   background-color: var(--accent);
 }
 
+/* Loader */
+.loader {
+  display: inline-block;
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid var(--primary);
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* Footer */
 footer {
   display: flex;
