--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,16 @@
   gap: 2rem;
 }
 
+.frontpage-main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.search-container {
+  margin: 0 auto;
+}
+
 .frontpage-section {
   display: flex;
   flex-direction: column;
